--- a/Desafio 4/package.json
+++ b/Desafio 4/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "desafio-3",
+  "name": "desafio-4",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js --ignore /*.txt",
+    "start": "node ./index.js",
+    "dev": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
-  }
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2"
+  },
+  "description": ""
 }
