--- a/Desafio 4/package.json
+++ b/Desafio 4/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6"
   },
   "description": ""
 }
