--- a/Desafio6/package.json
+++ b/Desafio6/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "desafio-4",
+  "name": "desafio6",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js",
+    "dev": "nodemon index.js --ignore */db",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dayjs": "^1.11.6",
     "express": "^4.18.2",
-    "express-handlebars": "^6.0.6"
+    "socket.io": "^4.5.3"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  }
 }
