--- a/Desafio6/package.json
+++ b/Desafio6/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon index.js --ignore */db",
+    "dev": "nodemon index.js --ignore ./db/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
