--- a/SegundaEntrega/.env
+++ b/SegundaEntrega/.env
@@ -1,5 +1,8 @@
 PORT=8080
-SELECTED_DB=filesystem
+SELECTED_DB=mongo
 
-MONGO_DB_URL=
-MONGO_DB_NAME=
+MONGO_DB_URL='mongodb://localhost:27017'
+MONGO_DB_NAME=ecommerce
+
+FIREBASE_DB_URL=''
+FIREBASE_DB_NAME=ecommerce
