--- a/DesafioClase22/package.json
+++ b/DesafioClase22/package.json
@@ -16,10 +16,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "faker": "^6.6.6",
     "firebase-admin": "^11.3.0",
-    "mongoose": "^6.7.3"
+    "mongoose": "^6.7.5",
+    "socket.io": "^4.5.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "nodemon": "^2.0.20"
   }
 }
