--- a/Desafio_Clase_28/package.json
+++ b/Desafio_Clase_28/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
+    "dev": "nodemon src/index.js --PORT 8080",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "firebase-admin": "^11.3.0",
+    "minimist": "^1.2.7",
     "mongoose": "^6.8.0",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
