--- a/Desafio_Clase_32/package.json
+++ b/Desafio_Clase_32/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "desafio_clase_28",
+  "name": "desafio_clase_32",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js --PORT 8080",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js --PORT 8080"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
-    "child_process": "^1.0.2",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "firebase-admin": "^11.3.0",
