--- a/Desafio_Clase_44/package.json
+++ b/Desafio_Clase_44/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
@@ -13,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "graphql": "^16.6.0",
     "nodemon": "^2.0.21"
   }
 }
